--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,8 +11,8 @@
     "@radix-ui/react-hover-card": "1.1.2",
     "@radix-ui/react-slot": "1.1.0",
     "@react-spring/web": "9.7.5",
-    "@react-three/drei": "9.120.4",
-    "@react-three/fiber": "8.17.10",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
     "@splinetool/react-spline": "4.1.0",
     "@splinetool/viewer": "^1.10.44",
     "@types/three": "0.170.0",
@@ -24,8 +24,8 @@
     "next": "^16.0.8",
     "next-themes": "0.4.4",
     "qss": "3.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "5.5.0",
     "react-pageflip": "2.0.3",
     "tailwind-merge": "2.5.5",
